--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserSuspension.cshtml
@@ -20,8 +20,7 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="AdminToUser" asp-action="Seller" asp-route-id="@Model.Id" class="btn btn-danger">設為賣家</a>|
-    <a asp-controller="AdminToUser" asp-action="Buyer" asp-route-id="@Model.Id" class="btn btn-primary">設為買家</a>|
+    <a asp-controller="AdminToUser" asp-action="Seller" asp-route-id="@Model.Id" class="btn btn-danger">啟用權限</a>|
     <a asp-controller="AdminToUser" asp-action="Administrator" asp-route-id="@Model.Id" class="btn btn-info">停用使用者權限</a>|
     <a asp-controller="AdminToUser" asp-action="UserData" class="btn btn-primary">返回使用者資料列表</a>
 </div>
