--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -2,7 +2,7 @@
 @model Textbox
 
 @{
-    ViewData["Title"] = "二手書交換平台";
+    ViewData["Title"] = "管理員控制中心";
 }
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
