--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutGetCpu.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutGetCpu.cshtml
@@ -3,40 +3,48 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>二手書交換平台</title>
+    <title>管理員控制中心</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/buttons.css" rel="stylesheet" />
-    <link href="~/css/AdminHome.css" rel="stylesheet" />
+    <link href="~/css/adminhome.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">二手書交換平台</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link nav-item-custom text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-item-custom text-dark button-cover-nav" asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
-                        </li>
-                    </ul>
-                </div>
+    <div style="position:fixed; top:0; width:100VW;">
+        <div style="display:flex;">
+            <div style=" width: 30%;background-color: white; padding: 10px; cursor:default;box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); text-align: center; font-size:26px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+                    <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+                </svg>管理員控制中心
             </div>
-        </nav>
-    </header>
-    <div class="container" style="max-width:1500px;">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white box-shadow  margin:0;" style=" width: 100%;background-color: white; padding: 10px; cursor:default;box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); text-align: center; font-size:26px;">
+                <div class="container">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">二手書交換平台</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link nav-item-custom button-cover-nav" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-item-custom button-cover-nav" asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </div>
+
+    <div class="container" style="max-width:1500px; margin-top:98px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-    <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
+    <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px; position:fixed;">
         <div class="container-footer d-flex justify-content-between">
             <div>
                 &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
@@ -53,7 +61,6 @@
     <script src="~/lib/chart.js/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
