--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
@@ -78,7 +78,7 @@
 </div>
 
 <div style="display:flex;">
-    <div style="width: 30%; margin:auto;">
+    <div style="width: 50%;">
     </div>
         <div class="content">
         <div class="container-fluid">
