--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
@@ -82,7 +82,7 @@
     </div>
 </div>
 <div style="display:flex;">
-    <div style="width: 30%; margin:auto;">
+    <div style="width: 50%;">
     </div>
     <div class="content">
             <form action="~/AdministratorHomePage/UploadImage" method="post" enctype="multipart/form-data">
