--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorData.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorData.cshtml
@@ -77,7 +77,7 @@
 </div>
 
 <div style="display:flex;">
-    <div style="width: 30%; margin:auto;">
+    <div style="width: 50%;">
     </div>
         <div class="content">
         <table class="table table-striped table-bordered table-hover">
