--- a/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
@@ -12,11 +12,11 @@
     position: fixed;
     background-color: #d3d3d3;
     padding: 10px;
-    height: calc(100% - 160px); /* Subtract 79px (top) + 81px (bottom) */
+    height: calc(100% - 160px);
     display: flex;
     flex-direction: column;
-    top: 79px; /* Adjust the top value */
-    bottom: 81px; /* Adjust the bottom value */
+    top: 79px; 
+    bottom: 81px;
 }
 
 
