--- a/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
@@ -31,7 +31,7 @@
     list-style-type: none;
     padding: 0;
     margin-bottom: 0;
-    gap: 5px;
+    height:100%;
     justify-content: space-evenly;
 }
 .content{
