--- a/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
@@ -6,7 +6,9 @@
 .row {
     display: flex;
 }
-
+p{
+    margin-bottom:0;
+}
 .sidebar {
     left: 0;
     position: fixed;
@@ -15,8 +17,9 @@
     height: calc(100% - 160px);
     display: flex;
     flex-direction: column;
-    top: 79px; 
+    top: 79px;
     bottom: 81px;
+    box-sizing: border-box;
 }
 
 
@@ -30,9 +33,9 @@
     flex-direction: column;
     list-style-type: none;
     padding: 0;
-    margin-bottom: 0;
     height:100%;
-    justify-content: space-evenly;
+    margin-bottom: 0;
+    justify-content: space-around;
 }
 .content{
     width:800px;
