--- a/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
@@ -17,22 +17,27 @@
         <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
         <tr><td>@Html.DisplayNameFor(model => model.ProductId)</td><td>@Model.ProductId</td></tr>
         <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-        @if (Model.Trade == "金錢")
-        {
-            <tr><td>@Html.DisplayNameFor(model => model.UnitPrice)</td><td>@(decimal.Round(Model.UnitPrice, 0) == 0 ? "" : decimal.Round(Model.UnitPrice, 0))</td></tr>
-        }
+        <tr><td>@Html.DisplayNameFor(model => model.UnitPrice)</td><td>@(decimal.Round(Model.UnitPrice, 0) == 0 ? "" : decimal.Round(Model.UnitPrice, 0))</td></tr>
         <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
     </table>
     <br />
     <div class="gap-2">
         @if (Model.Status == "待確認")
         {
-            <a href="@Url.Action("AcceptOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-primary">接受</a>
-            <a href="@Url.Action("DenyOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-danger">拒絕</a>
+            <form action="~/Seller/OrderDetails" method="post">
+                <input type="hidden" name="OrderId" value="@Model.OrderId">
+                <input type="hidden" name="trade" value="@Model.Trade">
+                <button type="submit" class="btn btn-danger mt-2" name="submit" value="接受交易">接受交易</button>
+                <button type="submit" class="btn btn-danger mt-2" name="submit" value="拒絕交易">拒絕交易</button>
+            </form>
         }
         @if (Model.Status == "待取消")
         {
-            <a href="@Url.Action("DenyOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-danger">取消訂單</a>
+            <form action="~/Seller/OrderDetails" method="post">
+                <input type="hidden" name="OrderId" value="@Model.OrderId">
+                <input type="hidden" name="trade" value="@Model.Trade">
+                <button type="submit" class="btn btn-danger mt-2" name="submit" value="取消訂單">取消訂單</button>
+            </form>
         }
         <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
     </div>
