--- a/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/AdminHome.css
@@ -10,22 +10,30 @@ p{
     margin-bottom:0;
 }
 .sidebar {
+    top: 0;
     left: 0;
     position: fixed;
-    background-color: #d3d3d3;
+    background-color: #292929;
     padding: 10px;
-    height: calc(100% - 160px);
+    height: calc(100% - 155px);
     display: flex;
     flex-direction: column;
-    top: 79px;
-    bottom: 81px;
+    top: 75px;
+    bottom: 80px;
     box-sizing: border-box;
+    width:23.4%;
 }
 
 
 .navtext {
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
+    color: #87cefa;
+}
+.no-hover {
+    border-left: 0px;
+    font-size: 20px;
+    color: #87cefa;
+    border-left: 3px solid #00ffff;
 }
 
 .menu {
@@ -33,12 +41,16 @@ p{
     flex-direction: column;
     list-style-type: none;
     padding: 0;
-    height:100%;
+    height: 100%;
     margin-bottom: 0;
     justify-content: space-around;
 }
-.content{
-    width:800px;
+.navtextbg {
+    font-size: 30px;
+    color: #87cefa;
+}
+.content {
+    width: 800px;
 }
 .datalist {
     width: 100%;
@@ -46,47 +58,13 @@ p{
 .menu-item a {
     display: block;
     padding: 5px;
-    color: #949494;
+    color: #87cefa;
     text-decoration: none;
 }
-    .menu-item a:hover {
-        background-color: white;
-        color: black;
-    }
+.navtext:hover {
+    border-left: 3px solid #00ffff;
+    color: white;
+}
 .createtext{
     font-size:35px;
-}
-@media screen and (max-width: 600px) {
-    .navtext {
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-width: 601px) and (max-width: 1200px) {
-    .navtext {
-        font-size: 25px;
-    }
-}
-
-@media screen and (min-width: 1201px) {
-    .navtext {
-        font-size: 30px;
-    }
-}
-@media screen and (max-height: 400px) {
-    .navtext {
-        font-size: 20px;
-    }
-}
-
-@media screen and (min-height: 401px) and (max-height: 800px) {
-    .navtext {
-        font-size: 25px;
-    }
-}
-
-@media screen and (min-height: 801px) {
-    .navtext {
-        font-size: 30px;
-    }
 }
