--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -16,7 +16,7 @@
     </form>
 
 
-    @if (Model.Count > 0)
+    @if (Model != null && Model.Count > 0)
     {
         @foreach (var book in Model)
         {
