許願井卡片以物易物修正

--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -32,4 +32,6 @@
         <a asp-action="Index" asp-controller="Home">回首頁</a>
     </div>
 </div>
-
+@section endJS{
+    <partial name="_ValidationScriptsPartial" />
+}
