--- a/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/OrderDetails.cshtml
@@ -32,13 +32,29 @@
             {
                 <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
             }
-            <tr><td>@Html.DisplayNameFor(model => model.ProductId)</td><td>@Model.ProductId</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
             <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
             <input type="hidden" name="OrderId" class="form-control" id="OrderId" value="@Model.OrderId" readonly />
             <input type="hidden" name="trade" class="form-control" id="trade" value="@Model.Trade" readonly />
-            <tr><td>@Html.DisplayNameFor(model => model.UnitPrice)</td><td>@(decimal.Round(Model.UnitPrice, 0) == 0 ? "" : decimal.Round(Model.UnitPrice, 0))</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.SellerUnitPrice)</td><td>@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</td></tr>
             <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
         </table>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+                <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
+            </div>
+            <table class="container-fluid">
+                <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
+                <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@Model.SellerTitle</td></tr>
+                <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@Model.SellerISBN</td></tr>
+                <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@Model.SellerAuthor</td></tr>
+                <tr><td>@Html.DisplayNameFor(model => model.SellerUnitPrice)</td><td>@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</td></tr>
+                <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
+            </table>
+            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+            </div>
+        </div>
         <br />
         <div class="gap-2">
             @if (Model.Status == "已成立")
