--- a/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
@@ -20,6 +20,38 @@
         <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
         <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
     </table>
+    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+            <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
+        </div>
+        <table class="container-fluid">
+            <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@Model.SellerTitle</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@Model.SellerISBN</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@Model.SellerAuthor</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
+        </table>
+        <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+        </div>
+    </div>
+    <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+            <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="errorLoad(this)" />
+        </div>
+        <table class="container-fluid">
+            <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.BuyerTitle)</td><td>@Model.BuyerTitle</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.BuyerISBN)</td><td>@Model.BuyerISBN</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.BuyerAuthor)</td><td>@Model.BuyerAuthor</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
+            <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
+        </table>
+        <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+            <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+        </div>
+    </div>
     <br />
     <div class="gap-2">
         @if (Model.Status == "待確認")
@@ -50,10 +82,10 @@
                     <img src="../Images/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="errorLoad(this)" />
                 </div>
                 <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.ProductId)</td><td>@item.ProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Title)</td><td>@item.Title</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.ISBN)</td><td>@item.ISBN</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Author)</td><td>@item.Author</td></tr>
+                    <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@item.ProductId</td></tr>
+                    <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@item.Title</td></tr>
+                    <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@item.ISBN</td></tr>
+                    <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@item.Author</td></tr>
                     <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@item.Trade</td></tr>
                     <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@item.Status</td></tr>
                 </table>
