--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/SaleInformation.cshtml
@@ -26,7 +26,7 @@
             <td>@Html.DisplayNameFor(model => model.Trade)</td>
             <td>@Html.DisplayFor(model => model.Trade)</td>
         </tr>
-        @if (@Model.Trade == "金錢")
+        @if (@Model.Trade == "買賣")
         {
             <tr>
                 <td>@Html.DisplayNameFor(model => model.UnitPrice)</td>
