--- a/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Forbidden.cshtml
@@ -16,8 +16,8 @@
         }
     </ul>
 
-    <div>
-        <a asp-action="Index" asp-controller="Home">回首頁</a>
-        <a asp-action="SignOut" asp-controller="Account" class="ml-5 text-danger">登出</a>
+    <div class="d-flex">
+        <a asp-action="Index" asp-controller="Home" class="btn btn-primary">回首頁</a>
+        <a asp-action="SignOut" asp-controller="Account" class="ml-5 btn btn-danger">登出</a>
     </div>
 </div>
