--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -4,17 +4,13 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = "商品詳情";
+    ViewBag.Title = "交換訂單詳情";
 }
 <div class="container-fluid">
-    <h1>訂單詳情</h1>
+    <h1>交換訂單詳情</h1>
     <form action="~/Buyer/BarterOrderDetails" method="post">
         <table class="container-fluid">
             <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerId)</td><td>@Model.SellerId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.BuyerId)</td><td>@Model.BuyerId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerName)</td><td>@Model.SellerName</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.BuyerName)</td><td>@Model.BuyerName</td></tr>
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
                 <tr>
@@ -32,13 +28,12 @@
             {
                 <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
             }
-            <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
             <input type="hidden" name="OrderId" class="form-control" id="OrderId" value="@Model.OrderId" readonly />
             <input type="hidden" name="trade" class="form-control" id="trade" value="@Model.Trade" readonly />
+            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
             <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
         </table>
+        <h2>對方的商品 @Model.SellerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
                 <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
@@ -55,6 +50,7 @@
                 <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
             </div>
         </div>
+        <h2>我的商品 @Model.BuyerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
                 <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="errorLoad(this)" />
@@ -72,16 +68,16 @@
             </div>
         </div>
         <br />
-        <div class="gap-2">
+        <div class="d-flex">
             @if (Model.Status == "已成立")
             {
                 <input type="hidden" name="OrderId" value="@Model.OrderId">
                 <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-primary" name="submit" value="完成訂單">完成訂單</button>
+                <button type="submit" class="btn btn-primary mr-2" name="submit" value="完成訂單">完成訂單</button>
             }
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
-                <button type="submit" class="btn btn-primary" name="submit" value="取消訂單">取消訂單</button>
+                <button type="submit" class="btn btn-primary mr-2" name="submit" value="取消訂單">取消訂單</button>
             }
             <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
         </div>
