--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -29,6 +29,8 @@
                     <tr><td>@Html.DisplayNameFor(model => model.UserName)</td><td>@item.UserName</td></tr>
                 </table>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+                    <a href="@Url.Action("SearchProducts", "Home", new {name = item.Title})" class="btn btn-primary mt-2">以書名搜尋</a>
+                    <a href="@Url.Action("SearchProducts", "Home", new {name = item.ISBN})" class="btn btn-primary mt-2">以ISBN搜尋</a>
                     <a href="@Url.Action("DeleteBook", "Buyer", new {Id = item.WishId})" class="btn btn-danger mt-2">刪除</a>
                 </div>
             </div>
