--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container-fluid">
-    <h1>@(ViewBag.Trade == "以物易物" ? "以物易物" : "買賣")賣場</h1>
+    <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")賣場</h1>
     <p>@ViewBag.Count</p>
     <div class="row py-2">
         @if (Model.Products.Count > 0)
@@ -21,27 +21,16 @@
                         <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
                             <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;"><img src="../Images/Products/@item.ProductId/@item.Image1" class="m-auto w-100" alt="@item.Title" onerror="errorLoad(this)" /></a>
                         </div>
-                        @if (item.Trade == "金錢")
-                        {
-                            <table class="container-fluid my-2">
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
+                        <table class="container-fluid my-2">
+                            <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
+                            <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
+                            <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
+                            <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
+                            @if (item.Trade.Contains("買賣"))
+                            {
                                 <tr><td>@Html.DisplayNameFor(model => model.Product.UnitPrice)</td><td>@(decimal.Round(item.UnitPrice, 0) == 0 ? "" : decimal.Round(item.UnitPrice, 0))</td></tr>
-                            </table>
-                        }
-                        else if (item.Trade == "以物易物")
-                        {
-                            <table class="container-fluid my-2">
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Title)</td><td>@item.Title</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.ISBN)</td><td>@item.ISBN</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Author)</td><td>@item.Author</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.Trade)</td><td>@item.Trade</td></tr>
-                                <tr><td>@Html.DisplayNameFor(model => model.Product.ContentText)</td><td>@item.ContentText</td></tr>
-                            </table>
-                        }
-
+                            }
+                        </table>
                     </div>
                 </div>
             }
