--- a/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/SaleInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/CreateTablePartial/SaleInformation.cshtml
@@ -27,22 +27,19 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.Trade)</td>
             <td>
-                <input type="hidden" class="form-control" required readonly id="Trade" value="@Model.Trade" />
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="Trade" id="flexRadioTrade1" value="金錢" @(Trade == "金錢" || Trade == null ? "checked" : "") onclick="Money()">
-                    <label class="form-check-label" for="flexRadioTrade1">
-                        金錢
-                    </label>
+                <input type="text" class="form-control" asp-for="Trade" readonly id="Trade" value="@Model.Trade" />
+                <div class="form-check mt-2">
+                    <input type="checkbox" id="moneytradecheckbox" value="買賣" @(Trade == "買賣" || Trade == "買賣與交換" ? "checked" : "") onclick="TradeCheck()">
+                    <label for="moneytradecheckbox"> 買賣</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="Trade" id="flexRadioTrade2" value="以物易物" @(Trade == "以物易物" ? "checked" : "") onclick="Barter()">
-                    <label class="form-check-label" for="flexRadioTrade2">
-                        以物易物
-                    </label>
+                    <input type="checkbox" id="bartertradecheckbox" value="交換" @(Trade == "交換" || Trade == "買賣與交換" ? "checked" : "") onclick="TradeCheck()">
+                    <label for="bartertradecheckbox"> 交換</label>
                 </div>
+                <span asp-validation-for="Trade" class="text-danger"></span>
             </td>
         </tr>
-        <tr id="UnitPrice_div" class="@(Model.Trade == "以物易物" ? "d-none" : "")">
+        <tr id="UnitPrice_div" class="@(Model.Trade == "交換" ? "d-none" : "")">
             <td><span class="text-danger">*</span>@Html.DisplayNameFor(model => model.UnitPrice)</td>
             <td>
                 <div class="input-group">
