--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -44,7 +44,7 @@
                 </div>
             </div>
         }
-        else if (Model.Trade.Contains("交換"))
+        @if (Model.Trade.Contains("交換"))
         {
 
             <!-- Button trigger modal -->
