--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -53,36 +53,37 @@
         </nav>
     </header>
     <button onclick="topFunction()" id="topBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
-    <main role="main" class="pb-5">
-        @RenderBody()
-    </main>
+    <div id="aside-right">
+        <main role="main" class="pb-5">
+            @RenderBody()
+        </main>
 
-    <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
-        
-        <div class="container-footer">
-            <div class="container">
-                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
-            </div>
-            
-            @if (User.Identity.IsAuthenticated)
-            {
-                @if (!User.IsInRole("User"))
+        <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
+
+            <div class="container-footer justify-content-between">
+                <div class="px-2">
+                    &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                </div>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    @if (!User.IsInRole("User"))
+                    {
+                        <div class="nav-item-btn buttonpartial">
+                            <partial name="_AdminLoginStatusPartial" />
+                        </div>
+                    }
+                }
+                else
                 {
                     <div class="nav-item-btn buttonpartial">
                         <partial name="_AdminLoginStatusPartial" />
                     </div>
                 }
-            }
-            else
-            {
-                <div class="nav-item-btn buttonpartial">
-                    <partial name="_AdminLoginStatusPartial" />
-                </div>
-            }
-            
-        </div>
 
-    </footer>
+            </div>
+
+        </footer>
+    </div>
     <script>
         function getPredictions() {
             var searchText = $('#searchInput').val();
